--- a/HomeWork4/Storyboards/Base.lproj/Main.storyboard
+++ b/HomeWork4/Storyboards/Base.lproj/Main.storyboard
@@ -143,6 +143,7 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Done"/>
                                 <connections>
+                                    <action selector="doneButtonDidTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hsu-qh-fib"/>
                                     <segue destination="cBl-NH-KNE" kind="unwind" identifier="goBack" unwindAction="unwind:" id="Ix5-Y3-TCk"/>
                                 </connections>
                             </button>
